stabilita struttura pagina

--- a/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
+++ b/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
@@ -1,2 +1,280 @@
 <app-navbar></app-navbar>
-<p>storia-eregole-page works!</p>
+<section>
+  <div class="flex justify-center h-full bg-red-500">
+    <div class="container h-full bg-green-500 flex justify-center">
+      <div class="w-[90%]">
+        <section>
+          <div class="w-[20%] flex justify-between p-2">
+            <button class="rounded-[15%] bg-primary text-center">regole</button>
+            <button class="rounded-[25px] bg-primary">glossario</button>
+          </div>
+          <div class="w-full h-[50%] inline-flex justify-center p-3">
+            <img
+              class="object-cover h-full rounded-[25px]"
+              src="https://www.outpump.com/wp-content/uploads/2020/01/outpump-sport-logo-basketball-nba.jpg"
+              alt=""
+            />
+          </div>
+        </section>
+        <section>
+          <div class="flex flex-nowrap justify-between m-3">
+            <div class="w-[45%] flex-wrap inline-flex rounded-">
+              <div
+                class="w-full flex justify-center card-header text-xl font-bold bg-secondary"
+              >
+                <p>Regole di base dell'NBA</p>
+              </div>
+              <div class="card-body bg-white p-3 text-justify">
+                <p>
+                  Il basket è uno sport molto diffuso in tutto il mondo, e forse
+                  avete già visto partite della nazionale italiana ai mondiali o
+                  alle olimpiadi.
+                </p>
+                <p>
+                  A differenza di altri sport americani come il football
+                  americano, il baseball e l'hockey, il basket è molto popolare
+                  in Italia. Potrebbe essere che non abbiate mai visto una
+                  partita di football americano, baseball o hockey sul ghiaccio
+                </p>
+                <p>
+                  Se non siete grandi appassionati di sport, ma volete vivere
+                  l'atmosfera unica delle partite negli Stati Uniti, l'NBA
+                  potrebbe essere la scelta migliore.
+                </p>
+                <ul>
+                  Ecco perché:
+                  <li>
+                    1. Gli stadi di NBA sono spesso situati nelle zone più
+                    turistiche delle città, quindi sono facili da raggiungere.
+                    Questo è simile anche per l'hockey, dato che molte arene
+                    ospitano sia partite di basket che di hockey, talvolta nello
+                    stesso giorno. Al contrario, gli stadi di MLB e NFL sono
+                    spesso fuori città, richiedendo spostamenti più lunghi sia
+                    in auto che con i mezzi pubblici.
+                  </li>
+                  <li>
+                    2. Nonostante ci siano timeout, la partita di basket scorre
+                    veloce, anche se ci sono pause. Questo è diverso nel
+                    baseball e nel football, dove le pause possono essere più
+                    lunghe e noiose.
+                  </li>
+                  <li>
+                    3. Le regole del basket sono più facili da capire rispetto
+                    ad altri sport, e anche se non ne conoscete nessuna, potete
+                    comunque seguire la partita. Al contrario, il football
+                    americano e il baseball possono essere più complicati da
+                    capire, mentre l'hockey è una via di mezzo.
+                  </li>
+                </ul>
+                <p>
+                  In breve, se volete avvicinarvi al clima delle partite negli
+                  Stati Uniti e preferite uno sport più facile da seguire, l'NBA
+                  potrebbe essere la scelta giusta per voi.
+                </p>
+              </div>
+            </div>
+            <div class="w-[45%] flex-wrap inline-flex rounded-">
+              <div
+                class="w-full flex justify-center card-header text-xl font-bold bg-secondary"
+              >
+                <p>Durata partita</p>
+              </div>
+              <div class="card-body bg-white p-3 text-justify">
+                <ul>
+                  La prima cosa importante è capire come funziona il cronometro
+                  durante una partita e quanto durano i vari periodi di gioco.
+                  <li>
+                    1. Ci sono 4 periodi di gioco, chiamati anche quarti, e
+                    ognuno dura 12 minuti.
+                  </li>
+                  <li>
+                    2. Dopo il secondo quarto c'è una pausa lunga, chiamata
+                    anche primo tempo, che dura 15 minuti.
+                  </li>
+                  <li>
+                    3. Quando una squadra ha la palla, ha 24 secondi per fare un
+                    tiro (questo si chiama shot clock).
+                  </li>
+                  <li>
+                    4. Le sostituzioni possono essere fatte durante le pause di
+                    gioco, non mentre il gioco è in corso, e non c'è un limite
+                    al numero di sostituzioni.
+                  </li>
+                  <li>
+                    5. Ogni squadra può fare 7 timeout, o pause, che durano 75
+                    secondi ciascuna.
+                  </li>
+                  <li>
+                    6. Il tempo di gioco effettivo si ferma quando la palla non
+                    è in gioco, quindi la partita, che è di 48 minuti in totale
+                    (la somma dei 4 quarti), può durare più di 2 ore a causa di
+                    queste interruzioni.
+                  </li>
+                </ul>
+                <p>
+                  In breve, la partita si divide in quarti di 12 minuti, ci sono
+                  pause lunghe e brevi, e il cronometro si ferma quando la palla
+                  non è in gioco, rendendo la durata totale della partita più
+                  lunga di quanto indicato dai soli 48 minuti di gioco
+                  effettivo.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="w-full h-[35vh] inline-flex justify-center p-3">
+            <img
+              class="object-fill w-full h-full rounded-[25px]"
+              src="https://www.outpump.com/wp-content/uploads/2020/01/outpump-sport-logo-basketball-nba.jpg"
+              alt=""
+            />
+          </div>
+        </section>
+        <section>
+            <div class="flex flex-nowrap justify-between m-3">
+                <div class="w-[45%] flex-wrap inline-flex rounded-">
+                  <div
+                    class="w-full flex justify-center card-header text-xl font-bold bg-secondary"
+                  >
+                    <p>Regole di base dell'NBA</p>
+                  </div>
+                  <div class="card-body bg-white p-3 text-justify">
+                    <p>
+                      Il basket è uno sport molto diffuso in tutto il mondo, e forse
+                      avete già visto partite della nazionale italiana ai mondiali o
+                      alle olimpiadi.
+                    </p>
+                    <p>
+                      A differenza di altri sport americani come il football
+                      americano, il baseball e l'hockey, il basket è molto popolare
+                      in Italia. Potrebbe essere che non abbiate mai visto una
+                      partita di football americano, baseball o hockey sul ghiaccio
+                    </p>
+                    <p>
+                      Se non siete grandi appassionati di sport, ma volete vivere
+                      l'atmosfera unica delle partite negli Stati Uniti, l'NBA
+                      potrebbe essere la scelta migliore.
+                    </p>
+                    <ul>
+                      Ecco perché:
+                      <li>
+                        1. Gli stadi di NBA sono spesso situati nelle zone più
+                        turistiche delle città, quindi sono facili da raggiungere.
+                        Questo è simile anche per l'hockey, dato che molte arene
+                        ospitano sia partite di basket che di hockey, talvolta nello
+                        stesso giorno. Al contrario, gli stadi di MLB e NFL sono
+                        spesso fuori città, richiedendo spostamenti più lunghi sia
+                        in auto che con i mezzi pubblici.
+                      </li>
+                      <li>
+                        2. Nonostante ci siano timeout, la partita di basket scorre
+                        veloce, anche se ci sono pause. Questo è diverso nel
+                        baseball e nel football, dove le pause possono essere più
+                        lunghe e noiose.
+                      </li>
+                      <li>
+                        3. Le regole del basket sono più facili da capire rispetto
+                        ad altri sport, e anche se non ne conoscete nessuna, potete
+                        comunque seguire la partita. Al contrario, il football
+                        americano e il baseball possono essere più complicati da
+                        capire, mentre l'hockey è una via di mezzo.
+                      </li>
+                    </ul>
+                    <p>
+                      In breve, se volete avvicinarvi al clima delle partite negli
+                      Stati Uniti e preferite uno sport più facile da seguire, l'NBA
+                      potrebbe essere la scelta giusta per voi.
+                    </p>
+                  </div>
+                </div>
+                <div class="w-[45%] flex-wrap inline-flex rounded-">
+                  <div
+                    class="w-full flex justify-center card-header text-xl font-bold bg-secondary"
+                  >
+                    <p>Durata partita</p>
+                  </div>
+                  <div class="card-body bg-white p-3 text-justify">
+                    <ul>
+                      La prima cosa importante è capire come funziona il cronometro
+                      durante una partita e quanto durano i vari periodi di gioco.
+                      <li>
+                        1. Ci sono 4 periodi di gioco, chiamati anche quarti, e
+                        ognuno dura 12 minuti.
+                      </li>
+                      <li>
+                        2. Dopo il secondo quarto c'è una pausa lunga, chiamata
+                        anche primo tempo, che dura 15 minuti.
+                      </li>
+                      <li>
+                        3. Quando una squadra ha la palla, ha 24 secondi per fare un
+                        tiro (questo si chiama shot clock).
+                      </li>
+                      <li>
+                        4. Le sostituzioni possono essere fatte durante le pause di
+                        gioco, non mentre il gioco è in corso, e non c'è un limite
+                        al numero di sostituzioni.
+                      </li>
+                      <li>
+                        5. Ogni squadra può fare 7 timeout, o pause, che durano 75
+                        secondi ciascuna.
+                      </li>
+                      <li>
+                        6. Il tempo di gioco effettivo si ferma quando la palla non
+                        è in gioco, quindi la partita, che è di 48 minuti in totale
+                        (la somma dei 4 quarti), può durare più di 2 ore a causa di
+                        queste interruzioni.
+                      </li>
+                    </ul>
+                    <p>
+                      In breve, la partita si divide in quarti di 12 minuti, ci sono
+                      pause lunghe e brevi, e il cronometro si ferma quando la palla
+                      non è in gioco, rendendo la durata totale della partita più
+                      lunga di quanto indicato dai soli 48 minuti di gioco
+                      effettivo.
+                    </p>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <section>
+            <div class="w-[90%]">
+                <div class=" flex bg-clip-border rounded-xl bg-white text-gray-700 shadow-md w-full max-w-[48rem] flex-row">
+                    <div
+                      class=" w-2/5 m-0 overflow-hidden text-gray-700 bg-white rounded-r-none bg-clip-border rounded-xl shrink-0">
+                      <img
+                        src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1471&amp;q=80"
+                        alt="card-image" class="object-cover w-full h-full" />
+                    </div>
+                    <div class="p-6">
+                      <h6
+                        class="block mb-4 font-sans text-base antialiased font-semibold leading-relaxed tracking-normal text-gray-700 uppercase">
+                        startups
+                      </h6>
+                      <h4 class="block mb-2 font-sans text-2xl antialiased font-semibold leading-snug tracking-normal text-blue-gray-900">
+                        Lyft launching cross-platform service this week
+                      </h4>
+                      <p class="block mb-8 font-sans text-base antialiased font-normal leading-relaxed text-gray-700">
+                        Like so many organizations these days, Autodesk is a company in
+                        transition. It was until recently a traditional boxed software company
+                        selling licenses. Yet its own business model disruption is only part of
+                        the story
+                      </p>
+                      <a href="#" class="inline-block"><button
+                          class="flex items-center gap-2 px-6 py-3 font-sans text-xs font-bold text-center text-gray-900 uppercase align-middle transition-all rounded-lg select-none disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none hover:bg-gray-900/10 active:bg-gray-900/20"
+                          type="button">
+                          Learn More<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                            stroke-width="2" class="w-4 h-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"></path>
+                          </svg></button></a>
+                    </div>
+                  </div>  
+            </div>
+        </section>
+      </div>
+    </div>
+  </div>
+</section>
+<footer class="mt-20">
+  <app-footer></app-footer>
+</footer>
