--- a/NBA/src/app/components/classifica-component/classifica.component.css
+++ b/NBA/src/app/components/classifica-component/classifica.component.css
@@ -1,39 +1,63 @@
-
-td div {
-    height: 3rem !important;
-    max-height: 3rem !important;
+#contenitore-tabella-classifica tbody tr h3 {
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
-tbody tr:nth-child(odd) td:first-child {
-    background-color: #C9C9C9;
-}
-
-tbody tr td:first-child {
-    border-bottom: 2px solid #C9C9C9;
-}
-
-tbody tr:last-child td{
-    border: 0px;
-}
-
-tbody tr td {
-    background-color: #D9D9D9;
+#contenitore-tabella-classifica tbody tr td {
+    background-color: #dcf1ff;
     padding-bottom: -2px;
     margin: 0px;
     border-bottom: 2px solid white;
 }
 
-tbody tr h3 {
-    padding-top: 0;
-    padding-bottom: 0;
+#contenitore-tabella-classifica tbody tr:last-child td {
+    border-bottom: 0px;
 }
 
-td {
+#contenitore-tabella-classifica tbody tr:nth-child(odd) td:first-child {
+    background-color: #acdeff;
+}
+
+#contenitore-tabella-classifica tbody tr td:first-child {
+    border-bottom: 2px solid #dcf1ff;
+}
+
+#contenitore-tabella-classifica td {
+    height: 3rem !important;
+    max-height: 3rem !important;
+    text-align: center;
+    border-right: 2px solid white;
+}
+
+#contenitore-tabella-classifica td:last-child {
+    border: 0;
+}
+
+#contenitore-tabella-classifica td div {
+    height: 2.5rem !important;
+    max-height: 2.5rem !important;
+}
+
+#contenitore-tabella-classifica td p {
+    font-size: small;
+}
+
+@media (min-width: 1024px) {
+    #contenitore-tabella-classifica td p {
+        font-size: medium !important;
+    }
+
+    #contenitore-tabella-classifica td {
     height: 4rem !important;
     max-height: 4rem !important;
-    text-align: center;
 }
 
-.active:hover {
-    border-bottom: 2px solid white;
+#contenitore-tabella-classifica td:last-child {
+    border: 0;
+}
+
+#contenitore-tabella-classifica td div {
+    height: 3rem !important;
+    max-height: 3rem !important;
+}
 }
