--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -1,19 +1,23 @@
-<div class="">
-    <div class="mb-10">
-        <ul class="flex flex-nowrap justify-center text-center">
-            <li class="me-2 w-full" role="presentation">
-                <button (click)="functionSelectionConference(true)" [class.border-b-2]="selectedConference===true" class="w-full inline-block p-4 focus:border-b-2 hover:border-b-2 rounded-t-lg" type="button">Profile</button>
+<div class="mt-10">
+    <div class="lg:h-16 h-12">
+        <ul class="w-full lg:h-16 h-12 flex flex-nowrap justify-around items-center">
+            <!-- Primo elemento della lista -->
+            <li [ngClass]="{'bg-secondary': selectedConference === true, 'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': selectedConference === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
+                <button (click)="functionSelectionConference(true)" [class.text-white]="selectedConference === true" class="w-full text-center text-white lg:text-3xl">EAST CONFERENCE</button>
             </li>
-            <li class="me-2 w-full" role="presentation">
-                <button (click)="functionSelectionConference(false)" class="w-full inline-block p-4 focus:border-b-2 hover:border-b-2 rounded-t-lg" type="button">Dashboard</button>
+
+            <!-- Secondo elemento della lista -->
+            <li [ngClass]="{'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': selectedConference === true, 'bg-secondary': selectedConference === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
+                <button (click)="functionSelectionConference(false)" [class.text-white]="selectedConference === false" class="w-full text-center lg:text-3xl">WEST CONFERENCE</button>
             </li>
+
         </ul>
     </div>
-    <div class="border-2 ">
+    <div class="border-2 mt-10" id="contenitore-tabella-classifica">
         <table class="w-full " *ngIf="selectedConference===true">
             <thead class="w-full bg-primary text-white">
                 <tr class="">
-                    <td class="w-[8%]">
+                    <td class="lg:w-[8%] w-[6%]">
                     </td>
                     <td class="w-[26%]">
                         <p class="w-full text-center" (click)="
@@ -55,18 +59,18 @@
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">S. </p>
                     </td>
-                    <td class="w-[12%]">
+                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Casa</p>
                         <p>V - S</p>
                     </td>
-                    <td class="w-[12%]">
+                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Traseferta</p>
                         <p>V - S</p>
                     </td>
-                    <td class="w-[12%]">
+                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Ultimi Match</p>
                     </td>
-                    <td class="w-[12%]">
+                    <td class="lg:w-[12%] w-[6%]">
                         <p class="w-full text-center" (click)="
                             favouriteStanding=!favouriteStanding;
                             functionChangeStandingWithFavourite(favouriteStanding, $event) ">❤️</p>
@@ -77,15 +81,15 @@
                 <ng-container *ngFor="let squadra of standingToShow?.eastConference, let i=index">
                     <ng-container *ngIf="i < countForStanding">
                         <tr class=""  >
-                            <td class="w-[8%]" class="">
-                                {{squadra.conference.rank}}
+                            <td class="lg:w-[8%] w-[6%]" class="">
+                                <p>{{squadra.conference.rank}}</p>
                             </td>
                             <td class="w-[26%]" class="">
                                 <div class="flex flex-nowrap items-center pl-3">
                                     <div class="w-1/4 flex justify-center">
                                         <img class="object-contain h-full" src={{squadra.team.logo}} alt="">
                                     </div>
-                                    <h3 class="w-3/4 p-2 flex justify-center items-center text-center">{{squadra.team.name}}</h3>
+                                    <p class="w-3/4 p-2 flex justify-center items-center text-center">{{squadra.team.name}}</p>
                                 </div>
                             </td>
                             <td class="w-[6%]">
@@ -97,18 +101,18 @@
                             <td class="w-[6%]">
                                 <p class="">{{squadra.loss.total}}</p>
                             </td>
-                            <td class="w-[12%]">
+                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.home}} <span>-</span>
                                     {{squadra.loss.home}}</p>
                             </td>
-                            <td class="w-[12%]">
+                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.away}} <span>-</span>
                                     {{squadra.loss.away}}
                             </td>
-                            <td class="w-[12%]">
+                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.lastTen}} <span>-</span> {{squadra.loss.lastTen}}</p>
                             </td>
-                            <td class="w-[12%]">
+                            <td class="lg:w-[12%] w-[6%]">
                                 <p class="" *ngIf="squadra.preferiti===true">❤️</p>
                                 <p class="" *ngIf="squadra.preferiti===false">🖤</p>
                             </td>
@@ -162,18 +166,18 @@
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">S. </p>
                     </td>
-                    <td class="w-[12%]">
+                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Casa</p>
                         <p>V - S</p>
                     </td>
-                    <td class="w-[12%]">
+                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Traseferta</p>
                         <p>V - S</p>
                     </td>
-                    <td class="w-[12%]">
+                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Ultimi Match</p>
                     </td>
-                    <td class="w-[12%]">
+                    <td class="lg:w-[12%] w-[6%]">
                         <p class="w-full text-center" (click)="
                             favouriteStanding=!favouriteStanding;
                             functionChangeStandingWithFavourite(favouriteStanding, $event) ">❤️</p>
@@ -185,7 +189,7 @@
                     <ng-container *ngIf="i < countForStanding">
                         <tr class="">
                             <td class="w-[8%]" class="">
-                                {{squadra.conference.rank}}
+                                <p>{{squadra.conference.rank}}</p>
                             </td>
                             <td class="w-[26%]" class="">
                                 <div class="flex flex-nowrap items-center pl-3">
@@ -193,7 +197,7 @@
                                         <img class="object-contain h-full" src={{squadra.team.logo}} alt="">
                                         <!-- <img class="object-contain h-full" src="../../../assets/logo-orlando-magic-2048.png" alt=""> -->
                                     </div>
-                                    <h3 class="w-3/4 p-2 flex justify-center items-center text-center">{{squadra.team.name}}</h3>
+                                    <p class="w-3/4 p-2 flex justify-center items-center text-center">{{squadra.team.name}}</p>
                                 </div>
                             </td>
                             <td class="w-[6%]">
@@ -205,18 +209,18 @@
                             <td class="w-[6%]">
                                 <p class="">{{squadra.loss.total}}</p>
                             </td>
-                            <td class="w-[12%]">
+                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.home}} <span>-</span>
                                     {{squadra.loss.home}}</p>
                             </td>
-                            <td class="w-[12%]">
+                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.away}} <span>-</span>
                                     {{squadra.loss.away}}
                             </td>
-                            <td class="w-[12%]">
+                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.lastTen}} <span>-</span> {{squadra.loss.lastTen}}</p>
                             </td>
-                            <td class="w-[12%]">
+                            <td class="lg:w-[12%] w-[6%]">
                                 <p class="" *ngIf="squadra.preferiti===true">❤️</p>
                                 <p class="" *ngIf="squadra.preferiti===false">🖤</p>
                             </td>
