--- a/NBA/src/app/views/classifica-page/classifica-page.component.html
+++ b/NBA/src/app/views/classifica-page/classifica-page.component.html
@@ -1,7 +1,14 @@
 <app-navbar></app-navbar>
-<p>classifica-page works!</p>
-<app-classifica [isParziale]="false">
-</app-classifica>
+<section>
+    <div class="flex justify-center">
+        <div class="container lg:w-[90%] w-full flex justify-center">
+            <div class="lg:w-[85%] w-full">
+                <app-classifica [isParziale]="false">
+                </app-classifica>
+            </div>
+        </div>
+    </div>
+</section>
 <footer class="mt-20">
     <app-footer></app-footer>
 </footer>
