--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -4,7 +4,7 @@
 <section>
     <div class="flex justify-center h-full">
         <div class="container flex justify-center h-full">
-            <div class="w-[90%] h-full flex flex-wrap justify-center">
+            <div class="lg:w-[90%] w-full h-full flex flex-wrap justify-center">
                 <div class="w-full h-20 bg-primary flex justify-center items-center">
                     <h2 class=" text-white text-4xl font-bold">
                         ULTIMI MATCH
@@ -23,14 +23,14 @@
 <section>
     <div class="flex justify-center">
         <div class="container flex justify-center">
-            <div class="w-[90%]  flex flex-wrap justify-center">
+            <div class="lg:w-[90%] w-full  flex flex-wrap justify-center">
                 <div class="w-full h-20 bg-primary flex justify-center items-center">
                     <h2 class=" text-white text-4xl font-bold">
                         CLASSIFICA
                     </h2>
                 </div>
                 <div class="w-full h-6 bg-secondary"></div>
-                <app-classifica [isParziale]="true" class="w-[75%] mt-10">
+                <app-classifica [isParziale]="true" class="lg:w-[85%] w-full mt-10">
 
                 </app-classifica>
             </div>
