--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -1,6 +1,6 @@
 <div class="mt-10">
-    <div class="lg:h-16 h-12">
-        <ul class="w-full lg:h-16 h-12 flex flex-nowrap justify-around items-center">
+    <div class="lg:h-16 h-10">
+        <ul class="w-full lg:h-16 h-10 flex flex-nowrap justify-around items-center">
             <!-- Primo elemento della lista -->
             <li [ngClass]="{'bg-secondary': selectedConference === true, 'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': selectedConference === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
                 <button (click)="functionSelectionConference(true)" [class.text-white]="selectedConference === true" class="w-full text-center text-white lg:text-3xl">EAST CONFERENCE</button>
@@ -10,68 +10,81 @@
             <li [ngClass]="{'border-secondary lg:border-4 border-2 hover:bg-[#DCF1FF]': selectedConference === true, 'bg-secondary': selectedConference === false}" class="lg:w-1/3 w-[45%] h-full flex justify-center items-center rounded-2xl">
                 <button (click)="functionSelectionConference(false)" [class.text-white]="selectedConference === false" class="w-full text-center lg:text-3xl">WEST CONFERENCE</button>
             </li>
-
         </ul>
     </div>
-    <div class="border-2 mt-10" id="contenitore-tabella-classifica">
+    <div class="w-full lg:h-8 h-5 lg:mt-10 mt-5 lg:mb-5 mb-2 flex justify-end">
+        <button class="rounded-full bg-[#BAD5E6] lg:px-6 px-3 lg:py-1 text-sm hover:underline" (click)="percentageStanding=true;
+            nameStanding=false;
+            crescente=false;
+            winStanding=false;
+            lossStanding=false;
+            functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)">
+            RESET FILTRI
+        </button>
+    </div>
+    <div class="border-2 border-white" id="contenitore-tabella-classifica">
         <table class="w-full " *ngIf="selectedConference===true">
             <thead class="w-full bg-primary text-white">
                 <tr class="">
                     <td class="lg:w-[8%] w-[6%]">
                     </td>
-                    <td class="w-[26%]">
-                        <p class="w-full text-center" (click)="
+                    <td class="lg:w-[24%] w-[40%]">
+                        <p class="w-full text-center hover:underline" (click)="
                             percentageStanding=false;
                             nameStanding=true;
                             crescente=!crescente;
                             winStanding=false;
                             lossStanding=false;
+                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">Nome </p>
                     </td>
-                    <td class="w-[6%]">
-                        <p class="w-full text-center" (click)="
+                    <td class="w-[10%]">
+                        <p class="w-full text-center hover:underline" (click)="
                             percentageStanding=true;
                             crescente=!crescente;
                             nameStanding=false;
                             winStanding=false;
                             lossStanding=false;
+                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
-                        ">% V. </p>
+                        ">{{vittore}}</p>
                     </td>
-                    <td class="w-[6%]">
-                        <p class="w-full text-center" (click)="
+                    <td class="w-[10%]">
+                        <p class="w-full text-center hover:underline" (click)="
                             percentageStanding=false;
                             nameStanding=false;
                             winStanding=true;
                             crescente=!crescente;
                             lossStanding=false;
+                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
-                        ">V. </p>
+                        ">{{vinte}}</p>
                     </td>
-                    <td class="w-[6%]">
-                        <p class="w-full text-center" (click)="
+                    <td class="w-[10%]">
+                        <p class="w-full text-center hover:underline" (click)="
                             percentageStanding=false;
                             nameStanding=false;
                             winStanding=false;
                             lossStanding=true;
                             crescente=!crescente;
+                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
-                        ">S. </p>
+                        ">{{sconfitte}}</p>
                     </td>
-                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                    <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Casa</p>
                         <p>V - S</p>
                     </td>
-                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                    <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Traseferta</p>
                         <p>V - S</p>
                     </td>
-                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                    <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Ultimi Match</p>
                     </td>
-                    <td class="lg:w-[12%] w-[6%]">
-                        <p class="w-full text-center" (click)="
+                    <td class="lg:w-[8%] w-[6%]">
+                        <p class="w-full text-center hover:underline" (click)="
                             favouriteStanding=!favouriteStanding;
                             functionChangeStandingWithFavourite(favouriteStanding, $event) ">❤️</p>
                     </td>
@@ -80,11 +93,11 @@
             <tbody>
                 <ng-container *ngFor="let squadra of standingToShow?.eastConference, let i=index">
                     <ng-container *ngIf="i < countForStanding">
-                        <tr class=""  >
+                        <tr class="">
                             <td class="lg:w-[8%] w-[6%]" class="">
                                 <p>{{squadra.conference.rank}}</p>
                             </td>
-                            <td class="w-[26%]" class="">
+                            <td class="lg:w-[24%] w-[40%]" class="">
                                 <div class="flex flex-nowrap items-center pl-3">
                                     <div class="w-1/4 flex justify-center">
                                         <img class="object-contain h-full" src={{squadra.team.logo}} alt="">
@@ -92,27 +105,27 @@
                                     <p class="w-3/4 p-2 flex justify-center items-center text-center">{{squadra.team.name}}</p>
                                 </div>
                             </td>
-                            <td class="w-[6%]">
+                            <td class="w-[10%]">
                                 <p>{{squadra.win.percentage}}</p>
                             </td>
-                            <td class="w-[6%]">
+                            <td class="w-[10%]">
                                 <p class="">{{squadra.win.total}}</p>
                             </td>
-                            <td class="w-[6%]">
+                            <td class="w-[10%]">
                                 <p class="">{{squadra.loss.total}}</p>
                             </td>
-                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                            <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.home}} <span>-</span>
                                     {{squadra.loss.home}}</p>
                             </td>
-                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                            <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.away}} <span>-</span>
                                     {{squadra.loss.away}}
                             </td>
-                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                            <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.lastTen}} <span>-</span> {{squadra.loss.lastTen}}</p>
                             </td>
-                            <td class="lg:w-[12%] w-[6%]">
+                            <td class="lg:w-[8%] w-[6%]">
                                 <p class="" *ngIf="squadra.preferiti===true">❤️</p>
                                 <p class="" *ngIf="squadra.preferiti===false">🖤</p>
                             </td>
@@ -124,61 +137,65 @@
         <table class="w-full" *ngIf="selectedConference===false">
             <thead class="w-full bg-primary text-white">
                 <tr class="">
-                    <td class="w-[8%]">
+                    <td class="lg:w-[8%] w-[6%]">
                     </td>
-                    <td class="w-[26%]">
-                        <p class="w-full text-center" (click)="
+                    <td class="lg:w-[24%] w-[40%]">
+                        <p class="w-full text-center hover:underline" (click)="
                             percentageStanding=false;
                             nameStanding=true;
                             crescente=!crescente;
                             winStanding=false;
                             lossStanding=false;
+                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
                         ">Nome </p>
                     </td>
-                    <td class="w-[6%]">
-                        <p class="w-full text-center" (click)="
+                    <td class="w-[10%]">
+                        <p class="w-full text-center hover:underline" (click)="
                             percentageStanding=true;
                             crescente=!crescente;
                             nameStanding=false;
                             winStanding=false;
                             lossStanding=false;
+                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
-                        ">% V. </p>
+                        ">{{vittore}}</p>
                     </td>
-                    <td class="w-[6%]">
-                        <p class="w-full text-center" (click)="
+                    <td class="w-[10%]">
+                        <p class="w-full text-center hover:underline" (click)="
                             percentageStanding=false;
                             nameStanding=false;
                             winStanding=true;
                             crescente=!crescente;
                             lossStanding=false;
+                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
-                        ">V. </p>
+                        ">{{vinte}}</p>
                     </td>
-                    <td class="w-[6%]">
-                        <p class="w-full text-center" (click)="
+                    <td class="w-[10%]">
+                        <p class="w-full text-center hover:underline" (click)="
                             percentageStanding=false;
                             nameStanding=false;
                             winStanding=false;
                             lossStanding=true;
                             crescente=!crescente;
+                            favouriteStanding=false;
                             functionChangeFilterStanding(percentageStanding,nameStanding,winStanding,lossStanding, crescente, $event)
-                        ">S. </p>
+                        ">{{sconfitte}}</p>
                     </td>
-                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                    <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Casa</p>
                         <p>V - S</p>
                     </td>
-                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                    <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Traseferta</p>
                         <p>V - S</p>
                     </td>
-                    <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                    <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                         <p class="w-full text-center">Ultimi Match</p>
                     </td>
-                    <td class="lg:w-[12%] w-[6%]">
-                        <p class="w-full text-center" (click)="
+                    <td class="lg:w-[8%] w-[6%]">
+                        <p class="w-full text-center hover:underline" (click)="
                             favouriteStanding=!favouriteStanding;
                             functionChangeStandingWithFavourite(favouriteStanding, $event) ">❤️</p>
                     </td>
@@ -188,39 +205,38 @@
                 <ng-container *ngFor="let squadra of standingToShow?.westConference, let i=index">
                     <ng-container *ngIf="i < countForStanding">
                         <tr class="">
-                            <td class="w-[8%]" class="">
+                            <td class="lg:w-[8%] w-[6%]" class="">
                                 <p>{{squadra.conference.rank}}</p>
                             </td>
-                            <td class="w-[26%]" class="">
+                            <td class="w-[24%]" class="">
                                 <div class="flex flex-nowrap items-center pl-3">
                                     <div class="w-1/4 flex justify-center">
                                         <img class="object-contain h-full" src={{squadra.team.logo}} alt="">
-                                        <!-- <img class="object-contain h-full" src="../../../assets/logo-orlando-magic-2048.png" alt=""> -->
                                     </div>
                                     <p class="w-3/4 p-2 flex justify-center items-center text-center">{{squadra.team.name}}</p>
                                 </div>
                             </td>
-                            <td class="w-[6%]">
+                            <td class="w-[10%]">
                                 <p>{{squadra.win.percentage}}</p>
                             </td>
-                            <td class="w-[6%]">
+                            <td class="w-[10%]">
                                 <p class="">{{squadra.win.total}}</p>
                             </td>
-                            <td class="w-[6%]">
+                            <td class="w-[10%]">
                                 <p class="">{{squadra.loss.total}}</p>
                             </td>
-                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                            <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.home}} <span>-</span>
                                     {{squadra.loss.home}}</p>
                             </td>
-                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                            <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.away}} <span>-</span>
                                     {{squadra.loss.away}}
                             </td>
-                            <td class="lg:w-[12%] lg:table-cell w-0 hidden">
+                            <td class="lg:w-[10%] lg:table-cell w-0 hidden">
                                 <p>{{squadra.win.lastTen}} <span>-</span> {{squadra.loss.lastTen}}</p>
                             </td>
-                            <td class="lg:w-[12%] w-[6%]">
+                            <td class="lg:w-[8%] w-[6%]">
                                 <p class="" *ngIf="squadra.preferiti===true">❤️</p>
                                 <p class="" *ngIf="squadra.preferiti===false">🖤</p>
                             </td>
