aggiunto titoli nella varie pagine e continuato modifiche generali estetica

--- a/NBA/src/app/views/partita-page/partita-page.component.html
+++ b/NBA/src/app/views/partita-page/partita-page.component.html
@@ -1,1 +1,12 @@
-<p>partita-page works!</p>
+<app-navbar></app-navbar>
+<section>
+    <div class="mb-10">
+        <div class="w-full h-20 bg-primary flex justify-center items-center">
+            <h2 class=" text-white text-4xl font-bold">
+                TEBELLINO
+            </h2>
+        </div>
+        <div class="w-full h-6 bg-secondary"></div>
+    </div>
+</section>
+<app-footer></app-footer>
