--- a/NBA/src/app/views/calendario-page/calendario-page.component.html
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.html
@@ -1,2 +1,11 @@
 <app-navbar></app-navbar>
-<p>calendario-page works!</p>
+<section>
+    <div class="mb-10">
+        <div class="w-full h-20 bg-primary flex justify-center items-center">
+            <h2 class=" text-white text-4xl font-bold">
+                CALENDARIO
+            </h2>
+        </div>
+        <div class="w-full h-6 bg-secondary"></div>
+    </div>
+</section>
