--- a/NBA/src/app/views/classifica-page/classifica-page.component.html
+++ b/NBA/src/app/views/classifica-page/classifica-page.component.html
@@ -1,5 +1,13 @@
 <app-navbar></app-navbar>
 <section>
+    <div class="mb-10">
+        <div class="w-full h-20 bg-primary flex justify-center items-center">
+            <h2 class=" text-white text-4xl font-bold">
+                CLASSIFICA STAGIONE 2023-2024
+            </h2>
+        </div>
+        <div class="w-full h-6 bg-secondary"></div>
+    </div>
     <div class="flex justify-center">
         <div class="container lg:w-[90%] w-full flex justify-center">
             <div class="lg:w-[85%] w-full">
