--- a/NBA/src/app/views/squadre-page/squadre-page.component.html
+++ b/NBA/src/app/views/squadre-page/squadre-page.component.html
@@ -1,5 +1,13 @@
 <app-navbar></app-navbar>
 <section>
+    <div class="mb-10">
+        <div class="w-full h-20 bg-primary flex justify-center items-center">
+            <h2 class=" text-white text-4xl font-bold">
+                SQUADRE
+            </h2>
+        </div>
+        <div class="w-full h-6 bg-secondary"></div>
+    </div>
     <div class="flex h-full justify-center">
         <div class="container h-full flex flex-wrap justify-center">
             <div class="w-[75%] h-full flex flex-wrap justify-center my-12">
