--- a/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
+++ b/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
@@ -1,5 +1,13 @@
 <app-navbar></app-navbar>
 <section>
+  <div class="mb-10">
+      <div class="w-full h-20 bg-primary flex justify-center items-center">
+          <h2 class=" text-white text-4xl font-bold">
+              STORIE & REGOLE
+          </h2>
+      </div>
+      <div class="w-full h-6 bg-secondary"></div>
+  </div>
   <div class="flex justify-center h-full">
     <div class="container h-full flex justify-center">
       <div class="w-[85%]">
